# new_bot

./: 1.py  debug.jsonl  log.py  main.py  manage.py  pyproject.toml
app/core/llm/: _decorators.py  base.py  context_handler.py  gemini_llm.py
config/: __init__.py  config.py  config.toml
core/: __init__.py  ioc.py
core/llm/: __init__.py  _decorators.py  base.py  context_handler.py  gemini_llm.py  llm_handler.py  openai_llm.py  schemas.py
core/model/: base.py
core/model/api/: __init__.py  api.py  base.py  message.py
core/model/llm/: base.py  gemini_llm.py  llm_handler.py  openai_llm.py
core/model/rag/: __init__.py  base.py  rag_pipeline.py  search_vectors.py  siliconflow_embedding.py  utils.py
core/rag/: base.py  siliconflow_embedding.py  utils.py
listeners/: base.py  event.py  napcat_listener.py
utils/: __init__.py  retry_utils.py
